--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
+    "esbuild": "^0.19.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.20.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
